# hype

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.ps1  start.sh
configs/: agents.yaml  context.yaml  evaluation.yaml  mcp_servers.yaml
neo4j/: server.py
sample-ui/: index.html  package-lock.json  package.json
sample-ui/src/: App.css  App.jsx
sample-ui/src/components/: CatalogSidebar.jsx  ChatContainer.jsx  CodeBlock.jsx  EvalPanel.jsx  EventTimeline.jsx  MarkdownRenderer.jsx  MessageBubble.jsx  MessageInput.jsx  ScrollToBottom.jsx  StreamingText.jsx  SuggestionChips.jsx  ThemeToggle.jsx  ThinkingIndicator.jsx  ToolCallCard.jsx
sample-ui/src/data/: prewrittenQueries.json
sample-ui/src/hooks/: useAutoScroll.js  useEval.js  useSSE.js
sample-ui/src/styles/: global.css  variables.css
sample-ui/src/utils/: sseClient.js
scripts/: _merge_qwen3_report.py  _resume_s4_s5.py  _sanity_check.py  _validate_judge.py  session_report.txt  test_comprehensive_sessions.py  test_detailed_sessions.py  test_diva_persona.py  test_e2e.py  test_session_a.py
src/diva/: __init__.py  dependencies.py  logging_config.py  main.py
src/diva/agents/: registry.py
src/diva/api/: middleware.py  registry.py  routes_chat.py  routes_feedback.py  routes_health.py  routes_sessions.py
src/diva/context/: __init__.py  drift_detector.py  entity_scratchpad.py  filter.py  manager.py  sliding_window.py  summarizer.py  token_budget.py
src/diva/core/: __init__.py  config.py
src/tachyon_langchain_client/: __init__.py  auth.py  client.py  config.py  headers.py
(+28 files in other folders)
